# exp_criativa_PUCPR

./: MQTT_SETUP.md  README.md  cliente_teste.py  database.db  diagnostico_mqtt.py  ex_mqtt.py  get_ip.py  main.py  pyproject.toml
RA2/ex02/: main.py
RA2/ex04/: main.py
RA2/ex07/: main.py
RA2/ex08/: main.py
RA2/ex12/: main.py
RA2/ex13/: main.py
RA2/ex14/: main.py
RA2/ex20/: app.py
RA2/ex23/: main.py
RA3/ex01/: main.py
RA3/ex06/: main.py
RA3/ex07/: main.py
RA3/ex10/: README.md  main.py
Recup/RA2eRA3/: CORRECOES_APLICADAS.md  README.md  database.sql  main.py
TDE2/blueprints/: login.py
TDE2/templates/: room.html
ex01/: main.py
ex03/: main.py
ex03/templates/: acturator.html
ex06/: main.py
ex07/templates/: index.html  room.html
ex09/templates/: acturator.html
ex10/: main.py
ex14/templates/: home.html  login.html
ex18/blueprints/: __init__.py  sensors.py
ex19/: app.py
ex19/blueprints/: sensors.py
ex19/templates/: home.html  login.html
ex21/templates/: delete_sensor.html  register_sensor.html
ex22/blueprints/: actuators.py
ex24 copy/: app.py  main.py
ex24 copy/blueprints/: __init__.py  actuators.py  login.py  sensors.py
ex24 copy/templates/: 400.html  403.html  404.html  500.html  acturator.html  base.html  base01.html  bathroom.html  bedroom.html  dashboard.html  delete_actuator.html  delete_sensor.html  delete_user.html  devices.html  home.html  index.html  item.html  list_actuators.html  list_sensors.html  list_users.html  login.html  register_actuator.html  register_sensor.html  register_user.html  room.html  (+2 more)
(+140 files in other folders)
