[project]
name = "exp-criativa-pucpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-mqtt>=1.2.1",
    "flask-sqlalchemy>=3.1.1",
    "numpy",
    "opencv-python",
]
